; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_next_ex.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_next_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @spl_array_next_ex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_array_next_ex(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @spl_array_get_pos_ptr(i32* %7, i32* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @zend_hash_move_forward_ex(i32* %10, i32* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @spl_array_is_object(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @spl_array_skip_protected(i32* %17, i32* %18)
  store i32 %19, i32* %3, align 4
  br label %24

20:                                               ; preds = %2
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @zend_hash_has_more_elements_ex(i32* %21, i32* %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %16
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32* @spl_array_get_pos_ptr(i32*, i32*) #1

declare dso_local i32 @zend_hash_move_forward_ex(i32*, i32*) #1

declare dso_local i64 @spl_array_is_object(i32*) #1

declare dso_local i32 @spl_array_skip_protected(i32*, i32*) #1

declare dso_local i32 @zend_hash_has_more_elements_ex(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
